// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`"#123\\n#456\\n---" 1`] = `
documentHead (1:1 ~ 3:4)
1 | #123¶
  | ^^^^^
2 | #456¶
  | ^^^^^
3 | ---¶
  | ^^^
<documentHead>
  <endComment value="123">
  <endComment value="456">
</documentHead>
`;

exports[`"&123 123 \\"123\\"\\n\\n... #123\\n #\\n\\n123\\n\\n\\n " 1`] = `
document (1:1 ~ 3:4)
1 | &123·123·"123"¶
  | ^^^^^^^^^^^^^^^
2 | ¶
  | ^
3 | ...·#123¶
  | ^^^
4 | ·#¶
5 | ¶
6 | 123¶
7 | ¶
8 | ¶
9 | ·¶
<document>
  <trailingComment value="123">
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="123 \\"123\\"">
      <anchor value="123" />
    </plain>
  </documentBody>
</document>
`;

exports[`"&123 123 \\"123\\"\\n\\n... #123\\n #\\n\\n123\\n\\n\\n " 2`] = `
documentHead (1:1 ~ 1:1)
1 | &123·123·"123"¶
  | ~
2 | ¶
3 | ...·#123¶
4 | ·#¶
5 | ¶
6 | 123¶
7 | ¶
8 | ¶
9 | ·¶
<documentHead>

</documentHead>
`;

exports[`"&123 123 \\"123\\"\\n\\n... #123\\n #\\n\\n123\\n\\n\\n " 3`] = `
documentBody (1:1 ~ 2:1)
1 | &123·123·"123"¶
  | ^^^^^^^^^^^^^^^
2 | ¶
  | ^
3 | ...·#123¶
4 | ·#¶
5 | ¶
6 | 123¶
7 | ¶
8 | ¶
9 | ·¶
<documentBody>
  <plain value="123 \\"123\\"">
    <anchor value="123" />
  </plain>
</documentBody>
`;

exports[`"&123 123 \\"123\\"\\n\\n... #123\\n #\\n\\n123\\n\\n\\n " 4`] = `
document (4:2 ~ 9:2)
1 | &123·123·"123"¶
2 | ¶
3 | ...·#123¶
4 | ·#¶
  |  ^^
5 | ¶
  | ^
6 | 123¶
  | ^^^^
7 | ¶
  | ^
8 | ¶
  | ^
9 | ·¶
  | ^
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="123">
      <leadingComment value="">
    </plain>
  </documentBody>
</document>
`;

exports[`"&123 123 \\"123\\"\\n\\n... #123\\n #\\n\\n123\\n\\n\\n " 5`] = `
documentHead (4:2 ~ 4:2)
1 | &123·123·"123"¶
2 | ¶
3 | ...·#123¶
4 | ·#¶
  |  ~
5 | ¶
6 | 123¶
7 | ¶
8 | ¶
9 | ·¶
<documentHead>

</documentHead>
`;

exports[`"&123 123 \\"123\\"\\n\\n... #123\\n #\\n\\n123\\n\\n\\n " 6`] = `
documentBody (4:2 ~ 9:2)
1 | &123·123·"123"¶
2 | ¶
3 | ...·#123¶
4 | ·#¶
  |  ^^
5 | ¶
  | ^
6 | 123¶
  | ^^^^
7 | ¶
  | ^
8 | ¶
  | ^
9 | ·¶
  | ^
<documentBody>
  <plain value="123">
    <leadingComment value="">
  </plain>
</documentBody>
`;

exports[`"...\\n\\n#\\n\\n" 1`] = `
document (1:1 ~ 1:4)
1 | ...¶
  | ^^^
2 | ¶
3 | #¶
4 | ¶
5 | ¶
<document>
  <documentHead>

  </documentHead>
  <documentBody>

  </documentBody>
</document>
`;

exports[`"...\\n\\n#\\n\\n" 2`] = `
documentHead (1:1 ~ 1:1)
1 | ...¶
  | ~
2 | ¶
3 | #¶
4 | ¶
5 | ¶
<documentHead>

</documentHead>
`;

exports[`"...\\n\\n#\\n\\n" 3`] = `
documentBody (1:1 ~ 1:1)
1 | ...¶
  | ~
2 | ¶
3 | #¶
4 | ¶
5 | ¶
<documentBody>

</documentBody>
`;

exports[`"...\\n\\n#\\n\\n" 4`] = `
document (3:1 ~ 5:1)
1 | ...¶
2 | ¶
3 | #¶
  | ^^
4 | ¶
  | ^
5 | ¶
  | ^
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <endComment value="">
  </documentBody>
</document>
`;

exports[`"...\\n\\n#\\n\\n" 5`] = `
documentHead (3:1 ~ 3:1)
1 | ...¶
2 | ¶
3 | #¶
  | ~
4 | ¶
5 | ¶
<documentHead>

</documentHead>
`;

exports[`"...\\n\\n#\\n\\n" 6`] = `
documentBody (3:1 ~ 5:1)
1 | ...¶
2 | ¶
3 | #¶
  | ^^
4 | ¶
  | ^
5 | ¶
  | ^
<documentBody>
  <endComment value="">
</documentBody>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n%BBB\\n---\\n\\n456\\n\\n" 1`] = `
document (2:1 ~ 6:4)
 1 | ¶
 2 | %AAA¶
   | ^^^^^
 3 | ---¶
   | ^^^^
 4 | 123¶
   | ^^^^
 5 | ¶
   | ^
 6 | ...¶
   | ^^^
 7 | ¶
 8 | %BBB¶
 9 | ---¶
10 | ¶
11 | 456¶
12 | ¶
13 | ¶
<document>
  <documentHead>
    <directive name="AAA" parameters=[] />
  </documentHead>
  <documentBody>
    <plain value="123" />
  </documentBody>
</document>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n%BBB\\n---\\n\\n456\\n\\n" 2`] = `
documentHead (2:1 ~ 3:4)
 1 | ¶
 2 | %AAA¶
   | ^^^^^
 3 | ---¶
   | ^^^
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | %BBB¶
 9 | ---¶
10 | ¶
11 | 456¶
12 | ¶
13 | ¶
<documentHead>
  <directive name="AAA" parameters=[] />
</documentHead>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n%BBB\\n---\\n\\n456\\n\\n" 3`] = `
documentBody (4:1 ~ 5:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
   | ^^^^
 5 | ¶
   | ^
 6 | ...¶
 7 | ¶
 8 | %BBB¶
 9 | ---¶
10 | ¶
11 | 456¶
12 | ¶
13 | ¶
<documentBody>
  <plain value="123" />
</documentBody>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n%BBB\\n---\\n\\n456\\n\\n" 4`] = `
document (8:1 ~ 13:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | %BBB¶
   | ^^^^^
 9 | ---¶
   | ^^^^
10 | ¶
   | ^
11 | 456¶
   | ^^^^
12 | ¶
   | ^
13 | ¶
   | ^
<document>
  <documentHead>
    <directive name="BBB" parameters=[] />
  </documentHead>
  <documentBody>
    <plain value="456" />
  </documentBody>
</document>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n%BBB\\n---\\n\\n456\\n\\n" 5`] = `
documentHead (8:1 ~ 9:4)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | %BBB¶
   | ^^^^^
 9 | ---¶
   | ^^^
10 | ¶
11 | 456¶
12 | ¶
13 | ¶
<documentHead>
  <directive name="BBB" parameters=[] />
</documentHead>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n%BBB\\n---\\n\\n456\\n\\n" 6`] = `
documentBody (11:1 ~ 13:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | %BBB¶
 9 | ---¶
10 | ¶
11 | 456¶
   | ^^^^
12 | ¶
   | ^
13 | ¶
   | ^
<documentBody>
  <plain value="456" />
</documentBody>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n---\\n\\n456\\n\\n" 1`] = `
document (2:1 ~ 6:4)
 1 | ¶
 2 | %AAA¶
   | ^^^^^
 3 | ---¶
   | ^^^^
 4 | 123¶
   | ^^^^
 5 | ¶
   | ^
 6 | ...¶
   | ^^^
 7 | ¶
 8 | ---¶
 9 | ¶
10 | 456¶
11 | ¶
12 | ¶
<document>
  <documentHead>
    <directive name="AAA" parameters=[] />
  </documentHead>
  <documentBody>
    <plain value="123" />
  </documentBody>
</document>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n---\\n\\n456\\n\\n" 2`] = `
documentHead (2:1 ~ 3:4)
 1 | ¶
 2 | %AAA¶
   | ^^^^^
 3 | ---¶
   | ^^^
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | ---¶
 9 | ¶
10 | 456¶
11 | ¶
12 | ¶
<documentHead>
  <directive name="AAA" parameters=[] />
</documentHead>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n---\\n\\n456\\n\\n" 3`] = `
documentBody (4:1 ~ 5:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
   | ^^^^
 5 | ¶
   | ^
 6 | ...¶
 7 | ¶
 8 | ---¶
 9 | ¶
10 | 456¶
11 | ¶
12 | ¶
<documentBody>
  <plain value="123" />
</documentBody>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n---\\n\\n456\\n\\n" 4`] = `
document (8:1 ~ 12:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | ---¶
   | ^^^^
 9 | ¶
   | ^
10 | 456¶
   | ^^^^
11 | ¶
   | ^
12 | ¶
   | ^
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="456" />
  </documentBody>
</document>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n---\\n\\n456\\n\\n" 5`] = `
documentHead (8:1 ~ 8:4)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | ---¶
   | ^^^
 9 | ¶
10 | 456¶
11 | ¶
12 | ¶
<documentHead>

</documentHead>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n---\\n\\n456\\n\\n" 6`] = `
documentBody (10:1 ~ 12:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | ---¶
 9 | ¶
10 | 456¶
   | ^^^^
11 | ¶
   | ^
12 | ¶
   | ^
<documentBody>
  <plain value="456" />
</documentBody>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n456\\n\\n" 1`] = `
document (2:1 ~ 6:4)
 1 | ¶
 2 | %AAA¶
   | ^^^^^
 3 | ---¶
   | ^^^^
 4 | 123¶
   | ^^^^
 5 | ¶
   | ^
 6 | ...¶
   | ^^^
 7 | ¶
 8 | 456¶
 9 | ¶
10 | ¶
<document>
  <documentHead>
    <directive name="AAA" parameters=[] />
  </documentHead>
  <documentBody>
    <plain value="123" />
  </documentBody>
</document>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n456\\n\\n" 2`] = `
documentHead (2:1 ~ 3:4)
 1 | ¶
 2 | %AAA¶
   | ^^^^^
 3 | ---¶
   | ^^^
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | 456¶
 9 | ¶
10 | ¶
<documentHead>
  <directive name="AAA" parameters=[] />
</documentHead>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n456\\n\\n" 3`] = `
documentBody (4:1 ~ 5:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
   | ^^^^
 5 | ¶
   | ^
 6 | ...¶
 7 | ¶
 8 | 456¶
 9 | ¶
10 | ¶
<documentBody>
  <plain value="123" />
</documentBody>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n456\\n\\n" 4`] = `
document (8:1 ~ 10:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | 456¶
   | ^^^^
 9 | ¶
   | ^
10 | ¶
   | ^
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="456" />
  </documentBody>
</document>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n456\\n\\n" 5`] = `
documentHead (8:1 ~ 8:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | 456¶
   | ~
 9 | ¶
10 | ¶
<documentHead>

</documentHead>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n...\\n\\n456\\n\\n" 6`] = `
documentBody (8:1 ~ 10:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ...¶
 7 | ¶
 8 | 456¶
   | ^^^^
 9 | ¶
   | ^
10 | ¶
   | ^
<documentBody>
  <plain value="456" />
</documentBody>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n---\\n\\n456\\n\\n" 1`] = `
document (2:1 ~ 6:1)
 1 | ¶
 2 | %AAA¶
   | ^^^^^
 3 | ---¶
   | ^^^^
 4 | 123¶
   | ^^^^
 5 | ¶
   | ^
 6 | ---¶
 7 | ¶
 8 | 456¶
 9 | ¶
10 | ¶
<document>
  <documentHead>
    <directive name="AAA" parameters=[] />
  </documentHead>
  <documentBody>
    <plain value="123" />
  </documentBody>
</document>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n---\\n\\n456\\n\\n" 2`] = `
documentHead (2:1 ~ 3:4)
 1 | ¶
 2 | %AAA¶
   | ^^^^^
 3 | ---¶
   | ^^^
 4 | 123¶
 5 | ¶
 6 | ---¶
 7 | ¶
 8 | 456¶
 9 | ¶
10 | ¶
<documentHead>
  <directive name="AAA" parameters=[] />
</documentHead>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n---\\n\\n456\\n\\n" 3`] = `
documentBody (4:1 ~ 6:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
   | ^^^^
 5 | ¶
   | ^
 6 | ---¶
 7 | ¶
 8 | 456¶
 9 | ¶
10 | ¶
<documentBody>
  <plain value="123" />
</documentBody>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n---\\n\\n456\\n\\n" 4`] = `
document (6:1 ~ 10:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ---¶
   | ^^^^
 7 | ¶
   | ^
 8 | 456¶
   | ^^^^
 9 | ¶
   | ^
10 | ¶
   | ^
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="456" />
  </documentBody>
</document>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n---\\n\\n456\\n\\n" 5`] = `
documentHead (6:1 ~ 6:4)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ---¶
   | ^^^
 7 | ¶
 8 | 456¶
 9 | ¶
10 | ¶
<documentHead>

</documentHead>
`;

exports[`"\\n%AAA\\n---\\n123\\n\\n---\\n\\n456\\n\\n" 6`] = `
documentBody (8:1 ~ 10:1)
 1 | ¶
 2 | %AAA¶
 3 | ---¶
 4 | 123¶
 5 | ¶
 6 | ---¶
 7 | ¶
 8 | 456¶
   | ^^^^
 9 | ¶
   | ^
10 | ¶
   | ^
<documentBody>
  <plain value="456" />
</documentBody>
`;

exports[`"\\n123\\n\\n...\\n\\n456\\n\\n" 1`] = `
document (2:1 ~ 4:4)
1 | ¶
2 | 123¶
  | ^^^^
3 | ¶
  | ^
4 | ...¶
  | ^^^
5 | ¶
6 | 456¶
7 | ¶
8 | ¶
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="123" />
  </documentBody>
</document>
`;

exports[`"\\n123\\n\\n...\\n\\n456\\n\\n" 2`] = `
documentHead (2:1 ~ 2:1)
1 | ¶
2 | 123¶
  | ~
3 | ¶
4 | ...¶
5 | ¶
6 | 456¶
7 | ¶
8 | ¶
<documentHead>

</documentHead>
`;

exports[`"\\n123\\n\\n...\\n\\n456\\n\\n" 3`] = `
documentBody (2:1 ~ 3:1)
1 | ¶
2 | 123¶
  | ^^^^
3 | ¶
  | ^
4 | ...¶
5 | ¶
6 | 456¶
7 | ¶
8 | ¶
<documentBody>
  <plain value="123" />
</documentBody>
`;

exports[`"\\n123\\n\\n...\\n\\n456\\n\\n" 4`] = `
document (6:1 ~ 8:1)
1 | ¶
2 | 123¶
3 | ¶
4 | ...¶
5 | ¶
6 | 456¶
  | ^^^^
7 | ¶
  | ^
8 | ¶
  | ^
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="456" />
  </documentBody>
</document>
`;

exports[`"\\n123\\n\\n...\\n\\n456\\n\\n" 5`] = `
documentHead (6:1 ~ 6:1)
1 | ¶
2 | 123¶
3 | ¶
4 | ...¶
5 | ¶
6 | 456¶
  | ~
7 | ¶
8 | ¶
<documentHead>

</documentHead>
`;

exports[`"\\n123\\n\\n...\\n\\n456\\n\\n" 6`] = `
documentBody (6:1 ~ 8:1)
1 | ¶
2 | 123¶
3 | ¶
4 | ...¶
5 | ¶
6 | 456¶
  | ^^^^
7 | ¶
  | ^
8 | ¶
  | ^
<documentBody>
  <plain value="456" />
</documentBody>
`;

exports[`"\\n123\\n\\n---\\n\\n456\\n\\n" 1`] = `
document (2:1 ~ 4:1)
1 | ¶
2 | 123¶
  | ^^^^
3 | ¶
  | ^
4 | ---¶
5 | ¶
6 | 456¶
7 | ¶
8 | ¶
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="123" />
  </documentBody>
</document>
`;

exports[`"\\n123\\n\\n---\\n\\n456\\n\\n" 2`] = `
documentHead (2:1 ~ 2:1)
1 | ¶
2 | 123¶
  | ~
3 | ¶
4 | ---¶
5 | ¶
6 | 456¶
7 | ¶
8 | ¶
<documentHead>

</documentHead>
`;

exports[`"\\n123\\n\\n---\\n\\n456\\n\\n" 3`] = `
documentBody (2:1 ~ 4:1)
1 | ¶
2 | 123¶
  | ^^^^
3 | ¶
  | ^
4 | ---¶
5 | ¶
6 | 456¶
7 | ¶
8 | ¶
<documentBody>
  <plain value="123" />
</documentBody>
`;

exports[`"\\n123\\n\\n---\\n\\n456\\n\\n" 4`] = `
document (4:1 ~ 8:1)
1 | ¶
2 | 123¶
3 | ¶
4 | ---¶
  | ^^^^
5 | ¶
  | ^
6 | 456¶
  | ^^^^
7 | ¶
  | ^
8 | ¶
  | ^
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="456" />
  </documentBody>
</document>
`;

exports[`"\\n123\\n\\n---\\n\\n456\\n\\n" 5`] = `
documentHead (4:1 ~ 4:4)
1 | ¶
2 | 123¶
3 | ¶
4 | ---¶
  | ^^^
5 | ¶
6 | 456¶
7 | ¶
8 | ¶
<documentHead>

</documentHead>
`;

exports[`"\\n123\\n\\n---\\n\\n456\\n\\n" 6`] = `
documentBody (6:1 ~ 8:1)
1 | ¶
2 | 123¶
3 | ¶
4 | ---¶
5 | ¶
6 | 456¶
  | ^^^^
7 | ¶
  | ^
8 | ¶
  | ^
<documentBody>
  <plain value="456" />
</documentBody>
`;

exports[`"- AAA\\n# comment\\n---\\n- BBB" 1`] = `
document (1:1 ~ 3:1)
1 | -·AAA¶
  | ^^^^^^
2 | #·comment¶
  | ^^^^^^^^^^
3 | ---¶
4 | -·BBB¶
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <endComment value=" comment">
    <sequence>
      <sequenceItem>
        <plain value="AAA" />
      </sequenceItem>
    </sequence>
  </documentBody>
</document>
`;

exports[`"- AAA\\n# comment\\n---\\n- BBB" 2`] = `
documentHead (1:1 ~ 1:1)
1 | -·AAA¶
  | ~
2 | #·comment¶
3 | ---¶
4 | -·BBB¶
<documentHead>

</documentHead>
`;

exports[`"- AAA\\n# comment\\n---\\n- BBB" 3`] = `
documentBody (1:1 ~ 3:1)
1 | -·AAA¶
  | ^^^^^^
2 | #·comment¶
  | ^^^^^^^^^^
3 | ---¶
4 | -·BBB¶
<documentBody>
  <endComment value=" comment">
  <sequence>
    <sequenceItem>
      <plain value="AAA" />
    </sequenceItem>
  </sequence>
</documentBody>
`;

exports[`"- AAA\\n# comment\\n---\\n- BBB" 4`] = `
document (3:1 ~ 4:6)
1 | -·AAA¶
2 | #·comment¶
3 | ---¶
  | ^^^^
4 | -·BBB¶
  | ^^^^^
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <sequence>
      <sequenceItem>
        <plain value="BBB" />
      </sequenceItem>
    </sequence>
  </documentBody>
</document>
`;

exports[`"- AAA\\n# comment\\n---\\n- BBB" 5`] = `
documentHead (3:1 ~ 3:4)
1 | -·AAA¶
2 | #·comment¶
3 | ---¶
  | ^^^
4 | -·BBB¶
<documentHead>

</documentHead>
`;

exports[`"- AAA\\n# comment\\n---\\n- BBB" 6`] = `
documentBody (4:1 ~ 4:6)
1 | -·AAA¶
2 | #·comment¶
3 | ---¶
4 | -·BBB¶
  | ^^^^^
<documentBody>
  <sequence>
    <sequenceItem>
      <plain value="BBB" />
    </sequenceItem>
  </sequence>
</documentBody>
`;

exports[`"---\\nhello\\n... #documentEndComment\\n" 1`] = `
document (1:1 ~ 3:4)
1 | ---¶
  | ^^^^
2 | hello¶
  | ^^^^^^
3 | ...·#documentEndComment¶
  | ^^^
4 | ¶
<document>
  <trailingComment value="documentEndComment">
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="hello" />
  </documentBody>
</document>
`;

exports[`"123\\n...\\n456" 1`] = `
document (1:1 ~ 2:4)
1 | 123¶
  | ^^^^
2 | ...¶
  | ^^^
3 | 456¶
<document>
  <documentHead>

  </documentHead>
  <documentBody>
    <plain value="123" />
  </documentBody>
</document>
`;

exports[`"123\\n...\\n456" 2`] = `
documentBody (1:1 ~ 1:4)
1 | 123¶
  | ^^^
2 | ...¶
3 | 456¶
<documentBody>
  <plain value="123" />
</documentBody>
`;

exports[`"123\\n--- #666\\n456" 1`] = `
root (1:1 ~ 3:4)
1 | 123¶
  | ^^^^
2 | ---·#666¶
  | ^^^^^^^^^
3 | 456¶
  | ^^^
<root>
  <document>
    <documentHead>

    </documentHead>
    <documentBody>
      <plain value="123" />
    </documentBody>
  </document>
  <document>
    <documentHead>
      <trailingComment value="666">
    </documentHead>
    <documentBody>
      <plain value="456" />
    </documentBody>
  </document>
</root>
`;

exports[`Document contains trailing content not separated by a ... or --- line 1`] = `
"Document contains trailing content not separated by a ... or --- line
1 | -·123¶
2 | a:¶
  | ^^^
3 | ¶
  | ^"
`;
